...
                    @unknown default:
                        EmptyView()
                    }
                }
                
                VStack(spacing: 10) {
                    Text(Image(systemName: "star"))
                    + Text(" \(reviewAverage) ")
                    + Text(productName)
                        .font(.headline)
                    
                    Text(description)
                        .font(.footnote)
...
