...

struct RecentlyViewedProductsPage: View {
    let products: [ProductView]
    
    var body: some View {
        VStack() {
            Text("Recently viewed products")
            
            ScrollView {
                VStack(spacing: 20) {
                    VStack {
                        ForEach(0..<products.count, id: \.self) { index in
                            products[index]
...
